# AoC2022

./: README  README.md  tox.ini
02-rockpaper/: part-one.py  part-two.py
03-packing/: part-one.py  part-two.py
04-sections/: part-one.py
05-crates/: part-two.py
06-signals/: part-one.py  part-two.py
07-filesystem/: part-one.py  part-two.py
08-treehouse/: part-one.py  part-two.py  wrong.part-one.py
09-ropebridge/: part-one.py  part-two.py
10-video/: partone.py  parttwo.py
11-piggyinthemiddle/: partone.py  parttwo.py
11-piggyinthemiddle/piggy/: Cargo.toml
11-piggyinthemiddle/piggy/src/: main.rs
12-findroute/: README  alykzander.py  partone.py  parttwo.py
13-nestedlists/: README  partone.py  parttwo.py
14-fallingsand/: partone.py  parttwo.py
15-beacons/: partone.py  parttwo.py
16-valves/: WilliamLP.py  drunkhacker.py  partone.py
17-rocks/: partone.old.py  partone.py
18-obsidian/: partone.py
18-obsidian/obsipy/: __init__.py
21-yelling/: partone.py  parttwo.py
23-seedlings/seedlings/: Cargo.toml
23-seedlings/seedlings/src/: main.rs
25-base5/: partone.py  pyproject.toml
25-base5/base5/: __init__.py
25-base5/base5py/: __init__.py
25-base5/rust/: Cargo.toml
25-base5/rust/src/: main.rs
25-base5/tests/: __init__.py  test_b5.py
calories/: part-one.py  part-two.py
crates/: part-one.py
sections/: part-two.py
signals/: part-one.py
